--- a/angularjs-project/index.html
+++ b/angularjs-project/index.html
@@ -7,11 +7,21 @@
     <link rel="stylesheet" href="./assets/Css/style.css">
     <link rel="stylesheet" href="./assets/Css/card.css">
     
-    <!-- Import AngularJS và AngularJS Routing -->
+    <!-- Import AngularJS and AngularJS Routing -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
-    <!-- Import taiwind -->
+    <script src="https:/ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.28/angular-ui-router.min.js"></script>
+
+    <!-- Import taiwind -->/
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <!-- Import Flowbite CSS (nếu cần) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.0.0/flowbite.min.css" />
+
+    <!-- Import Flowbite JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.0.0/flowbite.min.js"></script>
+
     <!-- Import các file trong dự án -->
     <script src="./app.module.js"></script>
     <!-- Controller -->
@@ -22,8 +32,8 @@
 
 </head>
 <body>
-    <div ng-include="'app/Views/layout/header.html'"></div>
+    <div ng-include="'./app/Views/layout/header.html'"></div>
     <div ng-view></div>
-    <div ng-include="'app/Views/layout/footer.html'"></div>
+    <div ng-include="'./app/Views/layout/footer.html'"></div>
 </body>
 </html>
