--- a/angularjs-project/index.html
+++ b/angularjs-project/index.html
@@ -9,10 +9,11 @@
     
     <!-- Import AngularJS and AngularJS Routing -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script src="https:/ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.28/angular-ui-router.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-file-upload/12.2.13/ng-file-upload.min.js"></script>
 
-    <!-- Import taiwind -->/
+    <!-- Import taiwind -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
@@ -25,7 +26,9 @@
     <!-- Import các file trong dự án -->
     <script src="./app.module.js"></script>
     <!-- Controller -->
-    <script src="./app/controllers/main.controller.js"></script>
+    <script src="./app/controllers/book.controller.js"></script>
+    <script src="./app/controllers/category.controller.js"></script>
+    <script src="./app/services/Category.services.js"></script>
     <script src="./app/services/Book.services.js"></script>
     <!--import icon-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
